package com.pharmacy.pattern.factory;

import com.pharmacy.model.GenericMedicine;
import com.pharmacy.model.Medicine;
import org.springframework.stereotype.Component;

import java.math.BigDecimal;
import java.time.LocalDate;

@Component
public class GenericMedicineFactory implements MedicineFactory {

    @Override
    public Medicine createMedicine(
            String name,
            String category,
            BigDecimal price,
            Integer stockQty,
            LocalDate expiryDate,
            Integer lowStockThreshold
    ) {
        Medicine medicine = new GenericMedicine();
        medicine.setName(name);
        medicine.setCategory(category == null || category.isBlank() ? "General" : category);
        medicine.setPrice(price);
        medicine.setStockQty(stockQty);
        medicine.setExpiryDate(expiryDate);
        medicine.setLowStockThreshold(lowStockThreshold);
        return medicine;
    }
}
