package com.pharmacy.pattern.factory;

import com.pharmacy.model.Medicine;
import com.pharmacy.model.Tablet;
import org.springframework.stereotype.Component;

import java.math.BigDecimal;
import java.time.LocalDate;

@Component
public class TabletMedicineFactory implements MedicineFactory {

    @Override
    public Medicine createMedicine(
            String name,
            String category,
            BigDecimal price,
            Integer stockQty,
            LocalDate expiryDate,
            Integer lowStockThreshold
    ) {
        Medicine medicine = new Tablet();
        medicine.setName(name);
        medicine.setCategory(category == null || category.isBlank() ? "Tablet" : category);
        medicine.setPrice(price);
        medicine.setStockQty(stockQty);
        medicine.setExpiryDate(expiryDate);
        medicine.setLowStockThreshold(lowStockThreshold);
        return medicine;
    }
}
